Add test to fault-shield-core and resolve conflicts